Added option to remove covergence warnings.

--- a/Random_Lasso_Analysis.ipynb
+++ b/Random_Lasso_Analysis.ipynb
@@ -125,7 +125,7 @@
     "        x, y, ground_truth = make_regression(n_samples=start_samples,\n",
     "                                             n_features=start_features, #* (ii + 1),\n",
     "                                             n_informative=start_informative, coef=True)\n",
-    "        # Sorting features their importance. Most important feature in X[:, 0].\n",
+    "        # Sorting features by their importance. Most important feature in X[:, 0].\n",
     "        sorted_indices = np.flip(np.argsort(ground_truth))\n",
     "        ground_truth = ground_truth[sorted_indices]\n",
     "        X = X[:, sorted_indices]\n",
